--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,6 +113,7 @@
     "    sns.set(style=\"whitegrid\", palette=\"muted\", color_codes=True)\n",
     "    plt.figure(figsize=(5,2))\n",
     "    sns.distplot(list(inp['disagreement_p'])).set_title(\"Distribution of Annotators'\\nDisagreement Probability\",fontsize=12)\n",
+    "    plt.savefig('annotator_disagreement.pdf', bbox_inches='tight')\n",
     "        \n",
     "plot_disagreement(train_df)"
    ]
